# edugestion

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
electron/: db.js  db.json  default.db.json  main.js  preload.cjs  preload.js  save.json
electron/controllers/: achatController.js  bulletinController.js  chargeController.js  classeController.js  configBulletinController.js  cycleController.js  ecoleInfoController.js  eleveController.js  eleveDataController.js  enseignantController.js  evaluationController.js  importController.js  index.js  initialisationController.js  inscriptionController.js  inventaireController.js  licenceController.js  materielController.js  matiereController.js  mouvementStockController.js  niveauClasseController.js  niveauScolaireController.js  noteController.js  paiementController.js  periodeController.js  photoController.js  resetController.js  seanceController.js  statsController.js  transactionController.js  venteController.js
electron/database/: db.js  index.js  initDB.js  migrations.js
electron/handlers/: achatHandlers.js  bulletinHandlers.js  chargeHandlers.js  classeHandlers.js  configBulletinHandlers.js  (+24 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: eleve_commands.rs  eleve_data_commands.rs  inscription_commands.rs  mod.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/models/: eleve.rs  eleve_data.rs  inscription.rs  mod.rs
(+331 files in other folders)
