[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Vos dépendances existantes
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Nouvelles dépendances pour la base de données avec SQLx
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid", "macros"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
once_cell = "1"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
custom-protocol = ["tauri/custom-protocol"]
